# moos-ivp-yhhuang

./: .gitignore  CMakeLists.txt  clean.sh  testSVN.txt
missions/PAM_buoy/: README  clean.sh  pDirectionCalculator.moos  (+2 more)
src/: CMakeLists.txt  Python-moos_setup.txt
src/lib_behaviors-yhhuang/: BHV_FixSourceFinding.cpp  BHV_FixSourceFinding.h  BHV_Pulse.cpp  BHV_Pulse.h  BHV_SearchFront.cpp  BHV_SearchFront.h  BHV_SearchFront_Tony.cpp  BHV_SearchFront_Tony.h  BHV_SearchFront_yhh.cpp  BHV_SearchFront_yhh.h  BHV_SourceTracking.cpp  BHV_SourceTracking.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/pAISdecoder/: .LastOpenedMOOSLogDirectory  AISdecoder.cpp  AISdecoder.h  AISdecoder_Info.cpp  AISdecoder_Info.h  AisNode.cpp  AisNode.h  BinToDec  CMakeLists.txt  Poke_nmea_sen.sh  binarytodeci.cpp  main.cpp  nmea-sample-2  pAISdecoder.moos
src/pAISdecoder/element_ex/: ais.alog
src/pAmbientCalculate/: AmbientCalculate.cpp  AmbientCalculate.h  AmbientCalculate_Info.cpp  AmbientCalculate_Info.h  CMakeLists.txt  main.cpp  pAmbientCalculate.moos
src/pChirp/: CMakeLists.txt  Chirp.cpp  Chirp.h  Chirp_Info.cpp  Chirp_Info.h  gen_chirp.py  main.cpp  pChirp.moos
src/pCommunicationAngle_yhhuang/: CMakeLists.txt  CommunicationAngle_yhhuang.cpp  CommunicationAngle_yhhuang.h  CommunicationAngle_yhhuang_Info.cpp  CommunicationAngle_yhhuang_Info.h  main.cpp  pCommunicationAngle_yhhuang.moos
src/pDataReceiver/: CMakeLists.txt  DataReceiver.cpp  DataReceiver.h  DataReceiver_Info.cpp  DataReceiver_Info.h  main.cpp  pDataReceiver.moos
src/pDataReceiver/DataTest/: 0_whistle_data.txt_sending  1_whistle_data.txt_sending  2_whistle_data.txt_sending  3_whistle_data.txt_sending  README
src/pDataSender/: CMakeLists.txt  DataSender.cpp  DataSender.h  DataSender_Info.cpp  DataSender_Info.h  Overview  main.cpp  pDataSender.moos
src/pDirectionCalculator/: CMakeLists.txt  DirectionCalculator.cpp  DirectionCalculator.h  DirectionCalculator_Info.cpp  DirectionCalculator_Info.h  clean.sh  main.cpp  pDirectionCalculator.moos
src/pDirectionCalculator/angle_test_file/: 0_degree_two_ch.txt  30_degree_two_ch.txt  negative_30_degree_two_ch.txt
src/pDirectionCalculator/csv_file/: README
src/pExampleApp/: ExampleApp.h
src/pFrontEstimateX/: CMakeLists.txt  FrontEstimateX.cpp  FrontEstimateX.h  FrontEstimateX_Info.cpp  FrontEstimateX_Info.h  main.cpp  pFrontEstimateX.moos
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  TSP_algorithm_readme.txt  main.cpp  pGenPath.moos
src/pGenPath/alpha_TSP/: alpha.bhv  alpha.moos
src/pGenPath_RePlanning/: CMakeLists.txt  GenPath_RePlanning.cpp  GenPath_RePlanning.h  GenPath_RePlanning_Info.cpp  GenPath_RePlanning_Info.h  main.cpp  pGenPath_RePlanning.moos
src/pGenPath_RePlanning/alpha_TSP/: alpha.bhv  alpha.moos
src/pHazardPath/: CMakeLists.txt  HazardPath.cpp  HazardPath.h  HazardPath_Info.cpp  HazardPath_Info.h
src/pHazardPath_monica/: CMakeLists.txt  HazardPath.cpp  HazardPath.h  HazardPath_Info.cpp  main.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp  pPointAssign.moos
src/pPointAssign_Auto/: CMakeLists.txt  PointAssign_Auto.cpp  PointAssign_Auto.h  PointAssign_Auto_Info.cpp  PointAssign_Auto_Info.h  main.cpp  pPointAssign_Auto.moos
src/pPoseKeep/: PoseKeep.cpp
src/pPrimeFactor/: 2  CMakeLists.txt  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  PrimeFactor_cpptest.cpp  PrimeNode.cpp  PrimeNode.h  PrimeTest  deque.cpp  main.cpp  prime.moos
src/pPrimeFactor/PrimeMission/: .LastOpenedMOOSLogDirectory  prime2.moos
src/pPrimeFactorTester/: CMakeLists.txt  PrimeFactorTester.cpp  PrimeFactorTester.h  PrimeFactorTester_Info.cpp  PrimeFactorTester_Info.h  main.cpp
src/pResultSaver/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  ResultSaver.cpp  ResultSaver.h  ResultSaver_Info.cpp  ResultSaver_Info.h  clean.sh  main.cpp  pResultSaver.moos
src/pResultSaver/Data_for_scp/: README
src/pSTFTAnalyser/: CMakeLists.txt  STFT.h  STFTAnalyser.cpp  STFTAnalyser.h  STFTAnalyser_Info.cpp  STFTAnalyser_Info.h  main.cpp  pSTFTAnalyser.moos
src/pSpectrogram/: CMakeLists.txt  Spectrogram.cpp  Spectrogram.h  Spectrogram_Info.cpp  Spectrogram_Info.h  main.cpp  pSpectrogram.moos  sigpack.h  spectrogramshow.h
src/pSpectrogram/base/: base.h
src/pSpectrogramMonitor/: CMakeLists.txt  SpectrogramMonitor.cpp  SpectrogramMonitor.h  SpectrogramMonitor_Info.cpp  SpectrogramMonitor_Info.h  glspectrogram.h  main.cpp  pSpectrogramMonitor.moos
src/pStoreSoundX/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  StoreSoundX.cpp  StoreSoundX.h  StoreSoundX_Info.cpp  StoreSoundX_Info.h  main.cpp  pStoreSoundX.moos
src/pStoreSoundX_TX1/: CMakeLists.txt  StoreSoundX_TX1.cpp  StoreSoundX_TX1.h  StoreSoundX_TX1_Info.cpp  StoreSoundX_TX1_Info.h  main.cpp  pStoreSoundX_TX1.moos
src/pWhistleDetector/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  GUI_spectrogramViewer.fig  GUI_spectrogramViewer.m  STFT.cpp  STFT.h  SpectrogramViewer.m  WhistleDetector.cpp  WhistleDetector.h  WhistleDetector_Info.cpp  WhistleDetector_Info.h  clean.sh  detection_algorithm.cpp  detection_algorithm.h  main.cpp  pWhistleDetector.moos
src/pWhistleDetector/Spectrogram_data/: README.txt
src/pWhistleDetector/Spectrogram_figure/: README
src/pWhistleDetector_vehicle/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  WhistleDetector_vehicle.cpp  WhistleDetector_vehicle.h  WhistleDetector_vehicle_Info.cpp  WhistleDetector_vehicle_Info.h  clean.sh  detection_algorithm.cpp  detection_algorithm.h  main.cpp  pWhistleDetector_vehicle.moos
src/uFldHazardMgrX/: CMakeLists.txt  HazardMgrX.cpp  HazardMgrX.h  HazardMgrXX.h  HazardMgrX_Info.cpp  HazardMgrX_Info.h  main.cpp  uFldHazardMgrX.moos
src/uFldHazardMgrX_monica/: CMakeLists.txt  HazardMgrXX.cpp
src/uSimAngle/: CMakeLists.txt  SimAngle.cpp  SimAngle.h  SimAngle_Info.cpp  SimAngle_Info.h  main.cpp  uSimAngle.moos
(+242 files in other folders)
